--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.7",
     "es6-promise": "^4.2.5",
+    "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "qs": "^6.5.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
