--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "^8.0.0",
     "qs": "^6.5.2",
     "sass-loader": "^7.1.0",
+    "screenfull": "^3.3.3",
     "vue": "^2.5.2",
     "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
