--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dist": "node ./distTest/nodeService.js",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "clipboard": "^2.0.1",
     "element-ui": "^2.4.7",
     "es6-promise": "^4.2.5",
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.19.0",
     "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
@@ -20,6 +26,8 @@
     "qs": "^6.5.2",
     "sass-loader": "^7.1.0",
     "screenfull": "^3.3.3",
+    "svg-sprite-loader": "^3.8.0",
+    "svgo": "^1.1.1",
     "vue": "^2.5.2",
     "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
