--- a/.babelrc
+++ b/.babelrc
@@ -8,15 +8,10 @@
     }],
     "stage-2"
   ],
-  "plugins": [
-    "transform-vue-jsx",
-    "transform-runtime",
-    [
-      "component",
-      {
-        "libraryName": "element-ui",
-        "styleLibraryName": "theme-chalk"
-      }
-    ]
-  ]
+  "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "env": {
+    "development":{
+      "plugins": ["dynamic-import-node"]
+    }
+  }
 }
