--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
+    "nprogress": "^0.2.0",
     "qs": "^6.5.2",
     "sass-loader": "^7.1.0",
     "screenfull": "^3.3.3",
@@ -39,6 +40,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
